[workspace]
[package]
name = "mpl-auction-house"
version = "1.1.4"
edition = "2021"
description = "Decentralized Sales Protocol for Solana Tokens"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
safecoin-program = {path = "../../../Safecoin/sdk/program"}
anchor-lang = {path = "../../../anchor/lang"}
anchor-spl = {path = "../../../anchor/spl"}
safe-token = { features = ["no-entrypoint"],path = "../../../safecoin-program-lib/libraries/safe-token/program" }
safe-associated-token-account = {features = ["no-entrypoint"],path = "../../../safecoin-program-lib/libraries/safe-associated-token-account/program"}
mpl-token-metadata = { features = [ "no-entrypoint" ], path="../../token-metadata/program" }
metaplex-token-metadata = {  features = [ "no-entrypoint" ], path="../../../metaplex/token-metadata/program" }
thiserror = "~1.0"
arrayref = "~0.3.6"

[dev-dependencies]
anchor-client = {path = "../../../anchor/client"}
shellexpand = "~2.1.0"
serde_json = "~1.0"
safecoin-program = "~1.8.12"
mpl-testing-utils= {path="../../core/rust/testing-utils"}
safecoin-program-test = "~1.8.12"
safecoin-sdk = "~1.9.15"
env_logger="~0.9.0"
