[workspace]
[package]
name = "mpl-auction-house"
version = "1.3.5"
edition = "2021"
description = "Decentralized Sales Protocol for Solana Tokens"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
safecoin-program = "1.14"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
safe-token  = { version = "3.5",  features = ["no-entrypoint"] }
safe-associated-token-account = {version = "1.1.1", features = ["no-entrypoint"]}
lpl-token-metadata = { version="1.7", features = [ "no-entrypoint" ] }
thiserror = "1.0"
arrayref = "0.3.6"

[dev-dependencies]
anchor-client = "0.26.0"
shellexpand = "2.1.2"
serde_json = "1.0"
safecoin-program = "1.14"
mpl-testing-utils= { path="../../core/rust/testing-utils" }
safecoin-program-test = "1.14"
safecoin-sdk = "1.14"
env_logger="0.9.3"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
