[package]
name = "mpl-auction"
version = "0.0.2"
description = "Solana Auction Program"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "AGPL-3.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "~0.9.1"
num-derive = "~0.3"
num-traits = "~0.2"
arrayref = "~0.3.6"
safecoin-program = {path = "../../../Safecoin/sdk/program"}
safe-token = { features = [ "no-entrypoint" ],path = "../../../safecoin-program-library/token/program" }
thiserror = "~1.0"

[dev-dependencies]
safecoin-program-test = "1.8.12"
safecoin-sdk = "~1.8.12"
mpl-testing-utils = {path="../../core/rust/testing-utils"}

[lib]
crate-type = ["cdylib", "lib"]
