[workspace]
[package]
name = "mpl-candy-machine"
version = "3.1.4"
description = "NFT Candy Machine v2: programmatic and trustless NFT drops."
authors = ["Jordan Prince", "Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2018"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {path = "../../../anchor/lang"}
arrayref = "0.3.6"
safe-token = { features = ["no-entrypoint"],path = "../../../safecoin-program-lib/libraries/safe-token/program" }
mpl-token-metadata = { features = ["no-entrypoint"], path="../../token-metadata/program" }
safe-associated-token-account = { features = ["no-entrypoint",] ,path = "../../../safecoin-program-lib/libraries/safe-associated-token-account/program"}
anchor-spl = {path = "../../../anchor/spl"}
safecoin-program = {path = "../../../Safecoin/sdk/program"}
safecoin-gateway = "~1.8.12"
