[workspace]
[package]
name = "mpl-candy-machine"
version = "3.1.4"
description = "NFT Candy Machine v2: programmatic and trustless NFT drops."
authors = ["Jordan Prince", "Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2018"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {path = "../../../anchor-21/lang"}
arrayref = "0.3.6"
safe-token = { features = ["no-entrypoint"],path = "../../../safecoin-program-library/token/program" }
mpl-token-metadata = { features = ["no-entrypoint"], path="../../token-metadata/program" }
safe-associated-token-account = { features = ["no-entrypoint",] ,path = "../../../safecoin-program-library/associated-token-account/program"}
anchor-spl = {path = "../../../anchor-21/spl"}
safecoin-program = {path = "../../../Safecoin/sdk/program"}
safecoin-gateway = {path = "../../../idcom-on-chain-identity-gateway/safecoin/integration-lib"}

[dev-dependencies]
safecoin-program-test ={path = "../../../Safecoin/program-test"}
safecoin-sdk = {path = "../../../Safecoin/sdk"}
anchor-client = {path = "../../../anchor-21/client"}
borsh = "~0.9.2"
