[package]
name = "mpl-fixed-price-sale-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
clap = { version = "3.0.5", features = [ "derive" ] }
safecoin-sdk = "1.9.5"
safecoin-client = "1.9.5"
mpl-fixed-price-sale = { path = "../program", features = [ "no-entrypoint" ] }
mpl-token-metadata = { features = [ "no-entrypoint" ], path="../../token-metadata/program"}
borsh = "0.9.1"
safe-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
anchor-lang = {path = "../../../anchor/lang"}
chrono = "0.4.19"
safe-associated-token-account = {path = "../../../safecoin-program-library/associated-token-account/program"}
serde_json = "1.0.79"
