[package]
name = "mpl-fixed-price-sale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_fixed_price_sale"

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {path = "../../../anchor-22/lang", features=["init-if-needed"]}
anchor-spl = {path = "../../../anchor-22/spl"}
safe-token = {path = "../../../safecoin-program-library/token/program"}
lpl-token-metadata = { features = [ "no-entrypoint" ], path="../../token-metadata/program"}

[dev-dependencies]
anchor-client = {path = "../../../anchor-22/client"}
safecoin-program-test = {path = "../../../Safecoin/program-test"}
safecoin-program = {path = "../../../Safecoin/sdk/program"}
safecoin-sdk = {path = "../../../Safecoin/sdk"}
safe-associated-token-account = {path = "../../../safecoin-program-library/associated-token-account/program"}
