[package]
name = "mpl_gumdrop"
version = "0.0.1"
description = "A Solana program for distributing tokens and NFTs according to a Merkle root."
authors = [ "Lawrence Wu <larry.wu@solana.com>" ]
keywords = ["solana"]
edition = "2018"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_gumdrop"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {path = "../../../anchor-24/lang"}
anchor-spl = {path = "../../../anchor-24/spl"}
safecoin-program = {path = "../../../Safecoin/sdk/program"}
safe-associated-token-account = { features = [ "no-entrypoint" ] ,path = "../../../safecoin-program-library/associated-token-account/program"}
lpl-token-metadata = { features = [ "no-entrypoint" ], path="../../token-metadata/program"}
