[package]
name = "metaplex-test-client"
version = "0.1.0"
description = "Metaplex Library Metaplex Test Client"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
safecoin-client = "1.8.12"
safecoin-program = {path = "../../../Safecoin/sdk/program"}
safecoin-sdk = "1.8.12"
bincode = "1.3.2"
arrayref = "0.3.6"
borsh = "0.9.1"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0.100", default-features = false }
clap = "2.33.3"
safecoin-clap-utils = "1.8.12"
safecoin-cli-config = "1.8.12"
metaplex-auction = { path = "../../auction/program", features = [ "no-entrypoint" ] }
metaplex-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ] }
metaplex-token-vault = { path = "../../token-vault/program", features = [ "no-entrypoint" ] }
metaplex = { path = "../program", features = [ "no-entrypoint" ] }
safe-token = { version="3.1.1", features = [ "no-entrypoint" ] }
