[package]
name = "metaplex-test-client"
version = "0.1.0"
description = "Metaplex Library Metaplex Test Client"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
safecoin-client = {path = "../../../Safecoin/client"}
safecoin-program = {path = "../../../Safecoin/sdk/program"}
safecoin-sdk = {path = "../../../Safecoin/sdk"}
bincode = "1.3.2"
arrayref = "0.3.6"
borsh = "0.9.1"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0.100", default-features = false }
clap = "2.33.3"
safecoin-clap-utils = {path = "../../../Safecoin/clap-utils"}
safecoin-cli-config = {path = "../../../Safecoin/cli-config"}
metaplex-auction = { path = "../../auction/program", features = [ "no-entrypoint" ] }
metaplex-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ] }
metaplex-token-vault = { path = "../../token-vault/program", features = [ "no-entrypoint" ] }
metaplex = { path = "../program", features = [ "no-entrypoint" ] }
safe-token = {features = [ "no-entrypoint" ],path = "../../../Safecoin/tokens"}
