[package]
name = "mpl-nft-packs"
version = "0.1.0"
edition = "2018"
license-file = "../../LICENSE"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "~0.3"
num-traits = "~0.2"
num_enum = "~0.5.4"
safecoin-program = "~1.9.28"
thiserror = "~1.0"
borsh = "~0.9.1"
spl-math = { version = "~0.1", features = [ "no-entrypoint" ] }
safe-token  = { version="~3.2.0", features = [ "no-entrypoint" ] }
lpl-token-metadata = { version="~1.2.10", features = [ "no-entrypoint" ] }
mpl-metaplex = { version = "0.0.3", features = ["no-entrypoint"] }
lpl-token-vault = { version = "0.1.0", features = [ "no-entrypoint" ] }
shank = "~0.0.7"
arrayref = "0.3.6"

[dev-dependencies]
safecoin-program-test = "~1.9.28"
safecoin-sdk = "~1.9.28"
rand = { version = "~0.8.4" }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
