[package]
name = "mpl-token-entangler"
version = "0.1.2"
edition = "2018"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_token_entangler"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {path = "../../../anchor/lang"}
anchor-spl = {path = "../../../anchor/spl"}
safe-token = {  features = ["no-entrypoint"],path = "../../../safecoin-program-library/token/program"}
safe-associated-token-account = { features = ["no-entrypoint"],path = "../../../safecoin-program-library/associated-token-account/program"}
mpl-token-metadata = {  features = [ "no-entrypoint" ], path="../../token-metadata/program" }
thiserror = "~1.0"
arrayref = "~0.3.6"
