[package]
name = "lpl-token-entangler"
version = "0.2.0"
edition = "2018"
authors = ["Metaplex Developers <dev@metaplex.com>"]
license-file = "../../LICENSE"
description = "MPL Token Entangler"
repository = "https://github.com/metaplex-foundation/metaplex-program-library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "lpl_token_entangler"

[features]
no-entrypoint = []
no-idl = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
safe-token  = { version = "3.5",  features = ["no-entrypoint"] }
safe-associated-token-account = {version = "1.1.1", features = ["no-entrypoint"]}
lpl-token-metadata = { version="1.7.0", features = [ "no-entrypoint" ] }
thiserror = "~1.0"
arrayref = "~0.3.6"

[dev-dependencies]
safecoin-program-test = "1.14"
safecoin-sdk = "1.14"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
