[package]
name = "metaplex-token-metadata-test-client"
version = "0.1.0"
description = "Metaplex Library Metadata Integration Test Client"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
safecoin-client = "1.8.12"
safecoin-program = {path = "../../../Safecoin/sdk/program"}
safecoin-sdk = "1.8.12"
bincode = "1.3.2"
borsh = "0.9.1"
clap = "2.33.0"
safecoin-clap-utils = "1.8.12"
safecoin-cli-config = "1.8.12"
mpl-token-metadata = { path="../program", features = [ "no-entrypoint" ] }
safe-token = { version="3.2.0", features = [ "no-entrypoint" ] }
