[package]
name = "metaplex-token-metadata-test-client"
version = "0.1.0"
description = "Metaplex Library Metadata Integration Test Client"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
safecoin-client = {path = "../../../Safecoin/client"}
safecoin-program = {path = "../../../Safecoin/sdk/program"}
safecoin-sdk = {path = "../../../Safecoin/sdk"}
bincode = "1.3.2"
borsh = "0.9.1"
clap = "2.33.0"
safecoin-clap-utils = {path = "../../../Safecoin/clap-utils"}
safecoin-cli-config = {path = "../../../Safecoin/cli-config"}
lpl-token-metadata = { path="../program", features = [ "no-entrypoint" ] }
safe-token = { path = "../../../safecoin-program-library/token/program", features = [ "no-entrypoint" ] }
