[package]
name = "mpl-token-metadata"
version = "1.2.7"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2021"
readme = "README.md"


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "~0.3"
arrayref = "~0.3.6"
num-traits = "~0.2"
safecoin-program = {path = "../../../Safecoin/sdk/program"}
mpl-token-vault = { path = "../../token-vault/program", features = [ "no-entrypoint" ] }
safe-token = { path = "../../../safecoin-program-library/token/program", features = [ "no-entrypoint" ] }
safe-associated-token-account = { path = "../../../safecoin-program-library/associated-token-account/program", features = ["no-entrypoint"] }
thiserror = "~1.0"
borsh = "~0.9.2"
shank = { version = "~0.0.1" }

[dev-dependencies]
safecoin-sdk = "~1.8.12"
safecoin-program-test = "~1.8.12"

[lib]
crate-type = ["cdylib", "lib"]
