[package]
name = "lpl-token-metadata"
version = "1.8.5"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[features]
no-entrypoint = []
test-bpf = []
serde-feature = ["serde", "serde_with"]

[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"
safecoin-program = "1.14"
safe-token  = { version = "3.2.0", features = ["no-entrypoint"] }
safe-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
lpl-token-auth-rules = { version = "1.1", features = ["no-entrypoint"] }
thiserror = "1.0"
borsh = "0.9.2"
shank = { version = "0.0.11" }
serde = { version = "1.0.149", optional = true }
serde_with = { version = "1.14.0", optional = true }
lpl-utils = { version = "0.1.0", path="../../core/rust/utils" }
lpl-token-metadata-context-derive = { version = "0.2.1", path = "../macro" }

[dev-dependencies]
rmp-serde = "1.1.1"
safecoin-sdk = "1.14"
safecoin-program-test = "1.14"
serde = { version = "1.0.147", features = ["derive"]}
async-trait = "0.1.64"

[lib]
crate-type = ["cdylib", "lib"]
