[package]
name = "metaplex-token-vault-test-client"
version = "0.1.0"
description = "Metaplex Library Fraction Test Client"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
safecoin-client = "1.8.5"
safecoin-program = {path = "../../../Safecoin/sdk/program"}
safecoin-sdk = "1.8.5"
bincode = "1.3.3"
borsh = "0.9.1"
clap = "3.0.13"
safecoin-clap-utils = "1.8.5"
safecoin-cli-config = "1.8.5"
metaplex-token-vault = { package ="mpl-token-vault", path = "../program", features = [ "no-entrypoint" ] }
safe-token = { version="3.2.0", features = [ "no-entrypoint" ] }
