[package]
name = "metaplex-token-vault-test-client"
version = "0.1.0"
description = "Metaplex Library Fraction Test Client"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
safecoin-client = {path = "../../../Safecoin/client"}
safecoin-program = {path = "../../../Safecoin/sdk/program"}
safecoin-sdk = {path = "../../../Safecoin/sdk"}
bincode = "1.3.3"
borsh = "0.9.1"
clap = "3.0.13"
safecoin-clap-utils = {path = "../../../Safecoin/clap-utils"}
safecoin-cli-config = {path = "../../../Safecoin/cli-config"}
metaplex-token-vault = { package ="mpl-token-vault", path = "../program", features = [ "no-entrypoint" ] }
safe-token = { features = [ "no-entrypoint" ] ,path = "../../../safecoin-program-library/token/program" }
