[package]
name = "mpl-testing-utils"
version = "0.0.2"
edition = "2018"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
anchor-client = {path = "../../../../anchor/client"}
shellexpand = "~2.1.0"
serde_json = "~1.0"
safecoin-program-test = {path = "../../../../Safecoin/program-test"}
safecoin-program = {path = "../../../../Safecoin/sdk/program"}
safecoin-sdk = {path = "../../../../Safecoin/sdk"}
safe-token = {features = ["no-entrypoint"],path = "../../../../safecoin-program-library/token/program" }
safe-associated-token-account = {features = ["no-entrypoint"] ,path = "../../../../safecoin-program-library/associated-token-account/program"}
mpl-token-vault = { path = "../../../token-vault/program", features = [ "no-entrypoint" ] }
mpl-token-metadata = { path = "../../../token-metadata/program", features = [ "no-entrypoint" ] }
rand = "~0.7.3"
num = "~0.4"
num-derive = "~0.3"
num-traits = "~0.2"
borsh = "~0.9.1"
