[package]
name = "mpl-testing-utils"
version = "0.1.1"
edition = "2021"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../../LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
anchor-client = "0.26"
shellexpand = "2.1.2"
serde_json = "1.0"
safecoin-program-test = "1.14"
safecoin-program = "1.14"
safecoin-sdk = "1.14"
safe-token  = { version = "3.5",  features = ["no-entrypoint"] }
safe-associated-token-account = { version = "1.1.1",  features = ["no-entrypoint"] }
lpl-token-metadata = { version="1.7", features = [ "no-entrypoint" ] }
lpl-token-vault = { version = "0.2", features = [ "no-entrypoint" ] }
rand = "0.8.5"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
borsh = "0.9.3"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
